After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683796 - ephy-web-view: do not store internal uris in the history
ephy-web-view: do not store internal uris in the history
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-11 13:33 UTC by Claudio Saavedra
Modified: 2012-09-17 18:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ephy-web-view: do not store internal uris in the history (2.49 KB, patch)
2012-09-11 13:33 UTC, Claudio Saavedra
none Details | Review
ephy-embed-utils: add ephy_embed_utils_is_no_show_address() (2.74 KB, patch)
2012-09-13 15:45 UTC, Claudio Saavedra
committed Details | Review
ephy-web-view: do not save history visits for no-show-addresses (1.45 KB, patch)
2012-09-13 15:46 UTC, Claudio Saavedra
reviewed Details | Review
ephy-web-view: do not save history visits for no-show-addresses (1.40 KB, patch)
2012-09-17 12:44 UTC, Claudio Saavedra
committed Details | Review
ephy-web-view: freeze history on homepage load (2.50 KB, patch)
2012-09-17 12:48 UTC, Claudio Saavedra
committed Details | Review
ephy-web-view: remove ephy_web_view_is_loading_homepage() (2.74 KB, patch)
2012-09-17 15:48 UTC, Claudio Saavedra
committed Details | Review

Description Claudio Saavedra 2012-09-11 13:33:56 UTC
Chrome doesn't store these addresses in the history, and we don't want
them to show up in the history window nor the overview. Let's just stop
storing them already.

I am not sure if we need a migration patch to remove already existing visits
to these pages, but let's just blacklist them already for now.
Comment 1 Claudio Saavedra 2012-09-11 13:33:57 UTC
Created attachment 224022 [details] [review]
ephy-web-view: do not store internal uris in the history

about:// and ephy-about:// have no place in the history. Let's just
blacklist them already.
Comment 2 Claudio Saavedra 2012-09-13 15:45:55 UTC
Created attachment 224236 [details] [review]
ephy-embed-utils: add ephy_embed_utils_is_no_show_address()
Comment 3 Claudio Saavedra 2012-09-13 15:46:03 UTC
Created attachment 224237 [details] [review]
ephy-web-view: do not save history visits for no-show-addresses

We don't show these addresses in the location entry because they are
very special to epiphany. There is no reason to store them in the
history.
Comment 4 Xan Lopez 2012-09-13 20:33:20 UTC
Review of attachment 224236 [details] [review]:

OK.

::: embed/ephy-embed-utils.c
@@ +178,3 @@
+  for (i = 0; do_not_show_address[i]; i++)
+    if (g_str_equal (address, do_not_show_address[i]))
+      return TRUE;

This is one statement but two lines, so let's use {} please!
Comment 5 Xan Lopez 2012-09-13 20:35:07 UTC
Review of attachment 224237 [details] [review]:

Why not freeze the history instead of adding an extra check?
Comment 6 Claudio Saavedra 2012-09-17 12:44:06 UTC
Created attachment 224499 [details] [review]
ephy-web-view: do not save history visits for no-show-addresses

We don't show these addresses in the location entry because they are
very special to epiphany. There is no reason to store them in the
history.
Comment 7 Claudio Saavedra 2012-09-17 12:48:53 UTC
Created attachment 224500 [details] [review]
ephy-web-view: freeze history on homepage load

And remove redundant check.
Comment 8 Xan Lopez 2012-09-17 15:39:59 UTC
Review of attachment 224499 [details] [review]:

OK.
Comment 9 Xan Lopez 2012-09-17 15:41:29 UTC
Review of attachment 224500 [details] [review]:

OK, but seems is_loading_homepage is unused now (as a method). So maybe just kill it too.
Comment 10 Claudio Saavedra 2012-09-17 15:42:42 UTC
(In reply to comment #9)
> Review of attachment 224500 [details] [review]:
> 
> OK, but seems is_loading_homepage is unused now (as a method). So maybe just
> kill it too.

I didn't kill it yet because it's "private" API, but it's actually unused, so...
Comment 11 Claudio Saavedra 2012-09-17 15:48:35 UTC
Created attachment 224525 [details] [review]
ephy-web-view: remove ephy_web_view_is_loading_homepage()

It's unused and its usage is redundant with the
ephy_web_view_is_history_frozen()
Comment 12 Claudio Saavedra 2012-09-17 18:30:57 UTC
Attachment 224236 [details] pushed as fcb0f32 - ephy-embed-utils: add ephy_embed_utils_is_no_show_address()
Attachment 224499 [details] pushed as 9d8795a - ephy-web-view: do not save history visits for no-show-addresses
Attachment 224500 [details] pushed as 009c776 - ephy-web-view: freeze history on homepage load
Attachment 224525 [details] pushed as 0b1ef33 - ephy-web-view: remove ephy_web_view_is_loading_homepage()