ephy-embed-utils: add ephy_embed_utils_is_no_show_address()

https://bugzilla.gnome.org/show_bug.cgi?id=683796