embed/ephy-embed-utils.h
@@ -47,6 +47,7 @@ gboolean ephy_embed_utils_address_has_web_scheme                (const char *add
 gboolean ephy_embed_utils_address_is_existing_absolute_filename (const char *address);
 char*    ephy_embed_utils_normalize_address                     (const char *address);
 gboolean ephy_embed_utils_url_is_empty                          (const char *location);
+gboolean ephy_embed_utils_is_no_show_address                    (const char *address);
 
 G_END_DECLS
 
