src/ephy-window.c
@@ -1479,32 +1479,15 @@ setup_ui_manager (EphyWindow *window)
 				    gtk_ui_manager_get_accel_group (manager));
 }
 
-/* This is the list of addresses that should never be shown in the
- * window's location entry. */
-static const char * do_not_show_address[] = {
-	"about:blank",
-	"ephy-about:overview",
-	NULL
-};
-
 static char *
 calculate_location (const char *typed_address, const char *address)
 {
-	int i;
 	const char *location;
 
 	/* If there's a typed address, use that over address. Never
 	 * show URIs in the 'do_not_show_address' array. */
 	location = typed_address ? typed_address : address;
-	
-	for (i = 0; do_not_show_address[i]; i++)
-	{
-		if (g_str_equal (location, do_not_show_address[i]))
-		{
-			location = NULL;
-			break;
-		}
-	}
+	location = ephy_embed_utils_is_no_show_address (location) ? NULL : location;
 
 	return g_strdup (location);
 }
